# rabotaem

./: .gitignore  .gitlab-ci.yml  Dockerfile  NAVBAR_WIDTH_LOGIC.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  sync-to-github.sh  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
components/: CommentFeed.js
deploy/: README.md
deploy/lemmy/: docker-compose.yaml  lemmy.hjson
deploy/photon/: docker-compose.yaml
deploy/sitemap-generator/: docker-compose.yaml  dockerfile  pyproject.toml
deploy/sitemap-generator/src/: app.py  lemmy_client.py  settings.py  sheduler.py  sitemap_generator.py
deploy/traefik/: docker-compose.yaml
deploy/traefik/data/: traefik.yml
docs/: How_to_make_POST_API.md
src/: app.html  hooks.server.ts  service-worker.ts
src/lib/: auth.ts  session.ts  settings.ts  taglineUtils.ts  util.ts
src/lib/api/: communities.ts
src/lib/components/: GoogleAnalytics.svelte  YandexMetrika.svelte
src/lib/data/: popularCommunities.ts
src/lib/i18n/: en.json  fr.json  ru.json
src/lib/lemmy/: error.ts  postfeed.ts
src/lib/translations/: ru.json
src/lib/types/: global.d.ts
src/lib/ui/: presets.ts
src/lib/util/: sortProgression.ts  transliterate.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/accounts/: +page.svelte
src/routes/admin/: +layout.svelte  +layout.ts
src/routes/communities/: +page.svelte
src/routes/inbox/: +layout.svelte  +page.svelte  InboxItem.svelte
src/routes/login/: +page.svelte
src/style/: app.css
static/: manifest.json  robots.txt
(+107 files in other folders)
