[project]
name = "aiderlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
]
